# goat

./: .gitignore  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
data/: get_data.py
goat/: placeholder.py
goat/indicators/: sma.py
requirements/: dev_3.11.txt  dev_3.12.txt  main_3.11.txt  main_3.12.txt
strat/: equal_weight_sp500.py  generic.py
tests/: test_placeholder.py
tests/indicators/: test_sma.py
utils/: excel.py  utils.py
