[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "goat"
version = "0.0.1a0"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-describe",
    "ruff",
]

[tool.setuptools]
packages = ["goat"]


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"