[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "goat"
version = "0.0.2a0"
requires-python = ">=3.12"
description = "A simple, fast, and flexible trader program."

dependencies = [
    "pandas",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "coverage",
    "docstr-coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-describe",
    "pytest-env",
    "pytest-xdist",
    "pyupgrade",
    "radon",
    "ruff",
    "types-setuptools",
    "tox",
    "uv",
    "validate-pyproject[all]",
    "hypothesis[numpy, django]",
]

[tool.setuptools]
packages = ["goat"]


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"